# kernelci-status

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile.bookworm  Dockerfile.trixie  README.md  build_deb.sh  build_deb_inner.sh  kernelci-status.toml.example
.github/workflows/: rust-checks.yml
src/: config.rs  error.rs  main.rs  state.rs
src/api/: config.rs  endpoints.rs  mod.rs  status.rs
src/auth/: mod.rs  password.rs
src/checkers/: condition.rs  docker.rs  http.rs  kubernetes.rs  mod.rs  postgresql.rs  prometheus.rs  tls.rs
src/db/: config.rs  endpoints.rs  history.rs  incidents.rs  maintenance.rs  mod.rs  reports.rs  schema.rs  sessions.rs  teams.rs  users.rs
src/notifications/: discord.rs  email.rs  mod.rs  telegram.rs  textfile.rs
src/scheduler/: mod.rs  runner.rs
src/web/: common.rs  configuration.rs  dashboard.rs  endpoints.rs  help.rs  history.rs  incidents.rs  login.rs  maintenance.rs  mod.rs  notifications.rs  reports.rs  status.rs  teams.rs  users.rs
static/: style.css
systemd/: kernelci-status.service
templates/: base.html  configuration.html  dashboard.html  endpoint_detail.html  endpoints.html  help.html  history.html  incident_action.html  incident_detail.html  incidents.html  login.html  maintenance.html  notifications.html  report_preview.html  reports.html  status.html  teams.html  users.html
templates/fragments/: config_form.html  endpoint_form.html  endpoint_row.html  history_table.html  status_badge.html  status_data.html  test_result.html
tests/: crypto_provider.rs
