[package]
name = "kernelci-status"
version = "0.3.3"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.37", features = ["bundled", "backup"] }
tokio-rusqlite = "0.7"

# Web framework
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["set-header"] }

# Templates
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }

# HTTP client
reqwest = { version = "0.13", features = ["rustls", "json"], default-features = false }
url = "2"

# TLS cert inspection
x509-parser = "0.18"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "1.0"
rustls-pki-types = "1"

# ACME (Let's Encrypt) - uses `ring` to match the rest of the codebase's rustls provider
rustls-acme = { version = "0.15", default-features = false, features = ["ring", "tls12", "webpki-roots", "tokio", "axum"] }
axum-server = "0.8"
futures-util = "0.3"

# Prometheus parsing
prometheus-parse = "0.2"

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }

# Kubernetes
kube = { version = "3.1", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.27", features = ["latest"] }

# SSH
openssh = "0.11"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }

# Password hashing
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }

# Session tokens
rand = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Errors
thiserror = "2"

# Misc
axum-extra = { version = "0.12", features = ["cookie", "form"] }

# Local patch: rustls-acme 0.15.1 deserializes authorizations with a required
# `token` on each Challenge, which breaks against Let's Encrypt now that
# `dns-persist-01` (no token) is advertised. Upstream fix pending in
# rustls-acme#92; vendor a patched copy in-tree until a release lands.
[patch.crates-io]
rustls-acme = { path = "vendor/rustls-acme" }
